--- a/index.html
+++ b/index.html
@@ -30,13 +30,33 @@
 
     </section>
     <section id="services">
-        <div class="services-detail">Website Development</div>
-        <div class="services-detail">Portfolio Websites</div>
-        <div class="services-detail">Product Landing Pages</div>
+        <div class="services-detail">
+            <h2>Website Development</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti commodi ipsum sint velit dolorum placeat.</p>
+
+        </div>
+        <div class="services-detail">
+            <h2>Portfolio Websites</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti commodi ipsum sint velit dolorum placeat.</p>
+
+        </div>
+        <div class="services-detail">
+            <h2>Product Landing Pages</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti commodi ipsum sint velit dolorum placeat.</p>
+        </div>
 
     </section>
     <section id="contact">
-        <div id="contact-bg"></div>
+        <div id="contact-div">
+            <form action="">
+                <label for="name">Name:</label><br>
+                <input type="text" id="name" name="name"><br>
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email">
+                <br>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
 
     </section>
 </body>
