Modified Home heading

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="home">
         <div id="background-img">
             <div>
-                <p id="head-home">We build great apps with React.js</p>
+                <p id="head-home">We build great websites with React.js</p>
                 <p id="detail">Top notch digital products for your business growth...</p>
                 <button>Request a free consultaion</button>
             </div>
