--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 
 
     </section>
+    
     <section id="services">
+        <h2>Our Services</h2>
+        <div id="services-box">
         <div class="services-detail">
             <h2>Website Development</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti commodi ipsum sint velit dolorum placeat.</p>
@@ -47,20 +50,24 @@
             <h2>Product Landing Pages</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti commodi ipsum sint velit dolorum placeat.</p>
         </div>
+        </div>
 
     </section>
     <section id="contact">
+        <h2>Contact Us</h2>
         <div id="contact-div">
             <form action="">
-                <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name"><br>
-                <label for="email">Email:</label><br>
-                <input type="email" id="email" name="email">
+                <input type="text" id="name" name="name" placeholder="Name"><br>
+                <input type="email" id="email" name="email" placeholder="Email">
                 <br>
-                <input type="submit" value="Submit">
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea><br>
+                <input id="submit" type="submit" value="Submit">
             </form>
         </div>
 
     </section>
+    <footer>
+        <div class="center">Copyright &copy;www.reactors.com All Rights Reserved</div>
+    </footer>
 </body>
 </html>
