--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     </section>
     <footer>
-        <div class="center">Copyright &copy;www.reactors.com All Rights Reserved</div>
+        <div class="center">Copyright &copy;www.reactors.com All Rights Reserved.</div>
     </footer>
 </body>
 </html>
