--- a/test.html
+++ b/test.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="phone.css">
     <title>Test</title>
 </head>
 <body>
-    <h2>This is test page.</h2>
+    
+    <div class="box1">
+        <div class="sub1"></div>
+        <div class="sub1"></div>
+        <div class="sub1"></div>
+        <div class="sub1"></div>
+    </div>
+    <div class="box2">
+        <div class="sub2">1</div>
+        <div class="sub2">2</div>
+    </div>
+    <div class="box3">
+        <div class="sub3">
+            <img src="pic1.jpg" alt="" class="pic3">
+        </div>
+        <div class="sub3">
+            <form action="" class="form-group">
+                <div>
+                    <input type="text" placeholder="Enter Username" name="username" required> 
+                </div>
+                <div>
+                    <input type="password" placeholder="Enter Password" name="password" required>
+                </div>
+                <div>
+                    <input id="submit" type="submit" value="Submit">
+                </div>
+            </form>
+        </div>
+    </div>
     
 </body>
 </html>
