--- a/test.html
+++ b/test.html
@@ -22,7 +22,7 @@
     </div>
     <div class="box3">
         <div class="sub3">
-            <img src="pic1.jpg" alt="" class="pic3">
+            <img src="pic1.jpg" alt="A dog" class="pic3">
         </div>
         <div class="sub3">
             <form action="" class="form-group">
